# bpistats

./: .gitignore  CMakeLists.txt  README.md  main.cpp
bpistats_app/: CMakeLists.txt  bpistats_app.cpp  bpistats_app.hpp  coindesk_analyser.cpp  coindesk_analyser.hpp
bpistats_app/test/: CMakeLists.txt  bpistats_app_tests.cpp  coindesk_analyser_tests.cpp  test.json
toolchain/: install-boost.sh
